fixed - removing, updated - content observer to interval and conditions, content js dark mode

--- a/scripts/content.css
+++ b/scripts/content.css
@@ -10,7 +10,7 @@
     :root {
         --text-color: #7C7C7C;
         --text-color2: #D9D9D9;
-        --background-color: rgba(0, 0, 0, 0.78);
+        --background-color: rgba(0, 0, 0, 0.75);
         --background-red: rgba(137, 0, 0, 0.56);
         --background-blue: rgba(0, 28, 174, 0.56);
     }
@@ -21,10 +21,10 @@
     src: url(../fonts/Jost-Regular.ttf);
 }
 
-box.dark {
+.box.dark {
     --text-color: #7C7C7C;
     --text-color2: #D9D9D9;
-    --background-color: rgba(0, 0, 0, 0.78);
+    --background-color: rgba(0, 0, 0, 0.75);
     --background-red: rgba(137, 0, 0, 0.56);
     --background-blue: rgba(0, 28, 174, 0.56);
 }
